better nan handling

--- a/mapping_configs.yml
+++ b/mapping_configs.yml
@@ -4,17 +4,17 @@
 lift_from_model_files:
   #- 'C:\Users\pihltd\Downloads\cds-model-9.0.1.yml'
   #- 'C:\Users\pihltd\Downloads\cds-model-props-9.0.1.yml'
-  #- 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.0/model-desc/cds-model.yml'
-  #- 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.0/model-desc/cds-model-props.yml'
-  #- 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model-props.yml'
-  #- 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model.yml'
-  - 'https://raw.githubusercontent.com/CBIIT/icdc-model-tool/refs/heads/master/model-desc/icdc-model.yml'
-  - 'https://raw.githubusercontent.com/CBIIT/icdc-model-tool/refs/heads/master/model-desc/icdc-model-props.yml'
+  #- 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.1/model-desc/cds-model.yml'
+  #- 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.1/model-desc/cds-model-props.yml'
+  - 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model-props.yml'
+  - 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model.yml'
+  #- 'https://raw.githubusercontent.com/CBIIT/icdc-model-tool/refs/heads/master/model-desc/icdc-model.yml'
+  #- 'https://raw.githubusercontent.com/CBIIT/icdc-model-tool/refs/heads/master/model-desc/icdc-model-props.yml'
 lift_to_model_files:  
   #- 'C:\Users\pihltd\Downloads\cds-model-10.0.0.yml'
   #- 'C:\Users\pihltd\Downloads\cds-model-props-10.0.0.yml'
-  - 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.1/model-desc/cds-model.yml'
-  - 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.1/model-desc/cds-model-props.yml'
+  - 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/10.0.0/model-desc/cds-model.yml'
+  - 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/10.0.0/model-desc/cds-model-props.yml'
 #
 # Select the types of mappings to be done
 cde_mapping: True
@@ -31,7 +31,8 @@ unmapped_report: True
 autoname: True
 #
 # Enter the path to save files to.  Use a trailing slash (\ or /) on the save path
-savepath: 'C:\Users\pihltd\Documents\MappingExp\'
+#savepath: 'C:\Users\pihltd\Documents\MappingExp\'
+savepath: '/media/sf_VMShare/ModelMapping/'
 #
 # If autoname is set to False, filenames are requried. 
 #mapping_file: './GC_9.0.1-CDS_10.0.0.tsv'
