Failed transformation experiment

--- a/mismatchremoval_config.yml
+++ b/mismatchremoval_config.yml
@@ -1,5 +1,5 @@
-filepath: '/media/sf_VMShare/IDCModel/'
-mappingfile: 'IDC_0.0.1-CDS_v10.0.0.tsv'
-mismatchfile: 'IDC_0.0.1-CDS_v10.0.0_MISMATCH_REPORT.tsv'
+filepath: '/media/sf_VMShare/ModelMapping/'
+mappingfile: 'CCDI_v3.1.0-CDS_v10.0.0.tsv'
+mismatchfile: 'CCDI_v3.1.0-CDS_v10.0.0_MISMATCH_REPORT.tsv'
 #mismatchfile: 'CDS_v9.0.0-CDS_v10.0.0_Cleanup.csv'
-savefile: 'IDC_0.0.1-CDS_v10.0.0_DEMISMATCHED.tsv'
+savefile: 'CCDI_v3.1.0-CDS_v10.0.0_DEMISMATCHED.tsv'
