--- a/mapping_configs.yml
+++ b/mapping_configs.yml
@@ -6,8 +6,8 @@ lift_from_model_files:
   #- 'C:\Users\pihltd\Downloads\cds-model-props-9.0.1.yml'
   #- 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.1/model-desc/cds-model.yml'
   #- 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/9.0.1/model-desc/cds-model-props.yml'
-  #- 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model-props.yml'
-  #- 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model.yml'
+  - 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model-props.yml'
+  - 'https://raw.githubusercontent.com/CBIIT/ccdi-model/refs/heads/main/model-desc/ccdi-model.yml'
   #- 'https://raw.githubusercontent.com/CBIIT/icdc-model-tool/refs/heads/master/model-desc/icdc-model.yml'
   #- 'https://raw.githubusercontent.com/CBIIT/icdc-model-tool/refs/heads/master/model-desc/icdc-model-props.yml'
   #- '/media/sf_VMShare/CIDH/CIDC_model.yml'
@@ -15,9 +15,9 @@ lift_from_model_files:
   #- '/media/sf_VMShare/CIDH/CIDC_model_terms.yml'
   #- 'https://raw.githubusercontent.com/CBIIT/ctdc-model/refs/heads/prod/model-desc/ctdc_model_file.yaml'
   #- 'https://raw.githubusercontent.com/CBIIT/ctdc-model/refs/heads/prod/model-desc/ctdc_model_properties_file.yaml'
-  - '/media/sf_VMShare/IDCModel/IDC_model.yml'
-  - '/media/sf_VMShare/IDCModel/IDC_model_properties.yml'
-  - '/media/sf_VMShare/IDCModel/IDC_model_terms.yml'
+  #- '/media/sf_VMShare/IDCModel/IDC_model.yml'
+  #- '/media/sf_VMShare/IDCModel/IDC_model_properties.yml'
+  #- '/media/sf_VMShare/IDCModel/IDC_model_terms.yml'
 
 lift_to_model_files:  
   #- 'C:\Users\pihltd\Downloads\cds-model-10.0.0.yml'
@@ -41,9 +41,10 @@ autoname: True
 #
 # Enter the path to save files to.  Use a trailing slash (\ or /) on the save path
 #savepath: 'C:\Users\pihltd\Documents\MappingExp\'
-#savepath: '/media/sf_VMShare/ModelMapping/'
+savepath: '/media/sf_VMShare/ModelMapping/'
 #savepath: '/media/sf_VMShare/CIDH/'
-savepath: '/media/sf_VMShare/IDCModel/'
+#savepath: '/media/sf_VMShare/IDCModel/'
+#savepath: '/media/sf_VMShare/CCDI/'
 #
 # If autoname is set to False, filenames are requried. 
 #mapping_file: './GC_9.0.1-CDS_10.0.0.tsv'
