--- a/transform_configs.yml
+++ b/transform_configs.yml
@@ -7,5 +7,7 @@ lift_to_model_files:
 value_mapping_file: '/media/sf_VMShare/ModelMapping/CCDI_v3.1.0-CDS_v10.0.0_ValueMapping.tsv'
 property_mapping_file: '/media/sf_VMShare/ModelMapping/CCDI_v3.1.0-CDS_v10.0.0.tsv'
 complex_mapping_file: './CCDI-TestMappingFormat.yml' 
-ccdi_excel: '/media/sf_VMShare/CCDI/phs003519_CCDI_Study_Manifest 1.xlsx'
-outputdir: '/media/sf_VMShare/CCDI/'
+#ccdi_excel: '/media/sf_VMShare/CCDI/phs003519_CCDI_Study_Manifest 1.xlsx'
+ccdi_excel: '/media/vmshare/CCDI/phs003519_CCDI_Study_Manifest 1.xlsx'
+#outputdir: '/media/sf_VMShare/CCDI/'
+outputdir: '/media/vmshare/CCDI/'
