--- a/neo4j_transform_configs.yml
+++ b/neo4j_transform_configs.yml
@@ -4,9 +4,9 @@ lift_from_model_files:
 lift_to_model_files:  
   - 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/10.0.0/model-desc/cds-model.yml'
   - 'https://raw.githubusercontent.com/CBIIT/cds-model/refs/heads/10.0.0/model-desc/cds-model-props.yml'
-transform_file: '/media/vmshare/ModelMapping/CCDI_v3.1.0-CDS_v10.0.0.tsv'
-#transform_file: '/media/vmshare/ModelMapping/CCDI_v3.1.0-CDS_v10.0.0_CURATED.tsv'
-outputdir: '/home/pihl/temp/'
+#transform_file: '/media/vmshare/ModelMapping/CCDI_v3.1.0-CDS_v10.0.0.tsv'
+transform_file: '/media/vmshare/ModelMapping/CCDI_v3.1.0-CDS_v10.0.0_CURATED.tsv'
+outputdir: '/home/pihl/temp2/'
 makefiles: True
 loadfiles: True
 makeedges: False
