--- a/neo4j_transform_configs.yml
+++ b/neo4j_transform_configs.yml
@@ -11,6 +11,8 @@ makefiles: True
 loadfiles: True
 makeedges: False
 modeledges: False
+lift_from_prefix: 'CCDI'
+lift_to_prefix: 'GC'
 compound_keys:
   - participant: 
       study_participant_id:
