--- a/data_load_configs.yml
+++ b/data_load_configs.yml
@@ -12,6 +12,8 @@ sourcefiles:
   - study: '/media/vmshare/CCDI/csv/study_CCDI.csv'
   - study_funding: '/media/vmshare/CCDI/csv/study_funding_CCDI.csv'
   - study_personnel: '/media/vmshare/CCDI/csv/study_personnel_CCDI.csv'
+separator: 'comma'
+#nodeprefix: 'CCDI'
 manualedges:
   #- src: dst
   - participant: study
